# prism

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  ENV_VARIABLES_GUIDE.md  FILE_SAVE_LOAD_GUIDE.md  QUICKSTART.md  RUN.md  SETUP_INSTRUCTIONS.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs
src-tauri/src/engine/: auth.rs  curl.rs  http.rs  mod.rs
src-tauri/src/env/: mod.rs  models.rs  resolver.rs  store.rs
src-tauri/src/store/: db.rs  mod.rs  models.rs
src-tauri/src/workspace/: io.rs  mod.rs  models.rs
src/scripts/: app.js  state.js
src/scripts/mock/: mockResponse.js
src/scripts/ui/: authForm.js  envVars.js  requestBar.js  responseView.js  sidebar.js  tabs.js
src/styles/: base.css  layout.css  theme-dark.css  variables.css
src/styles/components/: buttons.css  request-bar.css  response.css  sidebar.css  tabs.css
test/api/: README.md  index.js  package.json  prism-test-collections.json  start-with-instructions.js
test/api/routes/: hardening.js  users.js
