[package]
name = "prism"
version = "0.1.0"
description = "A local-first API testing tool built with Rust and Tauri"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dev-Ninjaa/prism"
homepage = "https://github.com/dev-Ninjaa/prism"
keywords = ["api", "testing", "http", "rest", "developer-tools"]
categories = ["development-tools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
url = "2"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
